# Smiley--A-Primitive-Game-Engine

./: .gitignore  CMakeLists.txt  MyGame.sln  README.md  unique.txt
MyGame/: CMakeLists.txt  MyGame.vcxproj  MyGameApp.cpp  MyGameApp.h  Unit.cpp  Unit.h  main.cpp
MyGame/Assets/Shaders/: myVertexShader.glsl
Smiley/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Smiley.h  Smiley.vcxproj  Smiley.vcxproj.filters  SmileyApp.cpp  SmileyApp.h  SmileyUtils.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h
Smiley/Assets/Shaders/: myFragmentShader.glsl
Smiley/GLFWimpl/: GlfwImplementation.cpp  GlfwImplementation.h
Smiley/OpenGLimpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: CMakeLists.txt  stb_img.cpp  stb_img.h  stbi.vcxproj  stbi.vcxproj.filters
