set(SOURCE_FILES SmileyApp.cpp GameWindow.cpp GLFWimpl/GlfwImplementation.cpp)
set(HEADER_FILES Smiley.h SmileyApp.h SmileyUtils.h WindowImplementation.h GameWindow.h GLFWimpl/GlfwImplementation.h)
add_library(smiley_lib SHARED ${SOURCE_FILES} ${HEADER_FILES})
target_precompile_headers(smiley_lib PRIVATE pch.h)
add_definitions(-DSMILEY_LIB)
target_link_libraries(smiley_lib glfw)
include_directories(../glfw/include)
include_directories(../Smiley)